--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Authentication
-GOOGLE_ID=key_goes_here
-GOOGLE_SECRET=key_goes_here
+GOOGLE_ID=788708222201-m9r3el5reucisagsqn0b49gnieqbn2j9.apps.googleusercontent.com
+GOOGLE_SECRET=cf3re3Uj95uPVneU0YGcavcG
 NEXTAUTH_URL=http://localhost:3000
 
 # Stripe
